--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "dev:api": "nodemon src/index.ts --api",
     "build": "tsc",
     "start": "node ./dist/index.js"
   },
@@ -16,16 +15,19 @@
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "dotenv": "^16.4.7",
+    "env-var": "^7.5.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.13.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.11.11",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
