--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.13.2"
+    "pg": "^8.13.2",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
